--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@popperjs/core": "^2.11.8",
     "@tanstack/react-table": "^8.20.5",
     "apexcharts": "^3.52.0",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
     "emoji-picker-react": "^4.12.0",
@@ -40,7 +41,8 @@
     "react-router-dom": "^6.26.1",
     "react-select": "^5.8.1",
     "sweetalert2": "^11.14.1",
-    "sweetalert2-react-content": "^5.0.7"
+    "sweetalert2-react-content": "^5.0.7",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
