--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coreui/coreui": "^5.2.0",
+    "@coreui/react": "^5.4.1",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/list": "^6.1.15",
@@ -27,6 +29,7 @@
     "perfect-scrollbar": "^1.5.5",
     "quill": "^2.0.2",
     "react": "^18.3.1",
+    "react-animated-numbers": "^1.0.0",
     "react-apexcharts": "^1.4.1",
     "react-calendar": "^5.0.0",
     "react-circular-progressbar": "^2.1.0",
